--- a/_posts/2015-06-25-lteu-oped.md
+++ b/_posts/2015-06-25-lteu-oped.md
@@ -5,7 +5,7 @@ comments: true
 brief:  With cellular providers jumping onto the unlicensed spectrum bandwagon on the premise that it is free for everyone, a careful examination is required to ensure that big businesses don’t benefit at the expense of a public good.
 ---
 
-*All that we see or seem is but a dream within a dream. -- Edgar Allan Poe*
+<!-- *All that we see or seem is but a dream within a dream. -- Edgar Allan Poe* -->
 
 -----
 
