--- a/_posts/2015-06-25-lteu-oped.md
+++ b/_posts/2015-06-25-lteu-oped.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: LTE-Unlicensed-How Cellular Providers are destroying the Freedom of Unlicensed Spectrum.
+title: LTE-Unlicensed:How Cellular Providers are destroying the Freedom of Unlicensed Spectrum.
 comments: true
 brief:  With cellular providers jumping onto the unlicensed spectrum bandwagon on the premise that it is free for everyone, a careful examination is required to ensure that big businesses don’t benefit at the expense of a public good.
 ---
